jsonschemadsl2ecore.trafo.opt/test/test84/invalidtests/example14.test84
{
	"123":123,
	"$33":33,
	"-&$#":null,
	"a-b$":{
		"foo":"bar",
		"*a":"aaaaa",
		"*b":"bbbbbb"
	},
	"##":{
		"PP_":"something",
		"PP_-a":"something 2"
	}
}  